[package]
name = "seal"
version = "0.1.0"
authors = ["William Speirs <bill.speirs@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3"
clap = "2.33"
log = "0.4"
fern = "0.5"
chrono = "0.4"
rmp-serde = "0.14"
serde = "1.0"
serde_derive = "1.0"
ring = { version="0.16", features=["std"] }
zstd = "0.5"

[dev-dependencies]
simple_logger = "1.3"